# FastTCP

./: .gitignore  CODE_OF_CONDUCT.md  Makefile  mkdocs.yml  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: gen_pages.py  index.md  mkdocstrings.md
docs/reference/: fasttcp.md
src/fasttcp/: __init__.py
tests/: test_version.py
